force-app/main/default/objects/Contract/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Order.TotalAmount</summarizedField>
    <summaryForeignKey>Order.ContractId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>