force-app/main/default/objects/Contract/fields/Amount_new__c.field-meta.xml
<CustomField>
    <fullName>Amount_new__c</fullName>
    <label>Amount New</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>