force-app/main/default/objects/Contract/fields/Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount__c</fullName>
    <label>Invoiced Amount</label>
    <summarizedField>Order.Amount__c</summarizedField>
    <summaryForeignKey>Order.ContractId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>