force-app/main/default/objects/Contract/fields/Invoiced_Amount_New__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount_New__c</fullName>
    <label>Invoiced Amount New</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>