force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Amount_new__c</columns>
    <columns>Invoiced_Amount_New__c</columns>
    <columns>Balance__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>